--- a/zpodcli/pyproject.toml
+++ b/zpodcli/pyproject.toml
@@ -20,3 +20,10 @@ ipython = "^8.8.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 88 # override black's default line-length
+
+[tool.isort]
+profile = "black"
+line_length = 88
