--- a/zpodsdk/pyproject.toml
+++ b/zpodsdk/pyproject.toml
@@ -12,18 +12,21 @@ packages = [
 include = ["CHANGELOG.md", "zpod/py.typed"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8.1"
 httpx = ">=0.15.4,<0.24.0"
 attrs = ">=21.3.0"
 python-dateutil = "^2.8.0"
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
+black = {version = "^23.1a1", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
-line-length = 120
-target_version = ['py37', 'py38', 'py39']
+line-length = 88
 exclude = '''
 (
   /(
@@ -35,5 +38,5 @@ exclude = '''
 '''
 
 [tool.isort]
-line_length = 120
+line_length = 88
 profile = "black"
