--- a/zpodsdk_builder/config.yaml
+++ b/zpodsdk_builder/config.yaml
@@ -2,8 +2,7 @@ project_name_override: zpodsdk
 package_name_override: zpod
 
 post_hooks:
-  - python ../build_client.py "zpod"
+  - python /zpodcore/zpodsdk_builder/build_client.py "zpod"
   - autoflake -i -r --remove-all-unused-imports --remove-unused-variables --ignore-init-module-imports .
   - isort .
   - black .
-  - cp -rf * /zpodcore/zpodsdk
