--- a/zpodcli/pyproject.toml
+++ b/zpodcli/pyproject.toml
@@ -5,17 +5,22 @@ description = ""
 authors = ["Timo Sugliani <timo.sugliani@gmail.com>"]
 license = "MIT"
 readme = "README.md"
+packages = [{include = "zpodcli", from = "src"}]
+
+[tool.poetry.scripts]
+zcli = "zpodcli.main:launch"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-rich = "^13.0.0"
+pydantic = "^1.10.4"
+typer = {extras = ["all"], version = "^0.7.0"}
 zpodsdk = {path = "../zpodsdk", develop = true}
-
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
 black = {version = "^23.1a1", allow-prereleases = true}
 ipython = "^8.8.0"
+
 
 [build-system]
 requires = ["poetry-core"]
