--- a/zpodapi/dockerfile
+++ b/zpodapi/dockerfile
@@ -9,22 +9,20 @@ RUN bash -c "if [ $INSTALL_DEV == 'true' ] ; then poetry export --dev -f require
 # BASE
 FROM python:3.11.1-slim as base
 RUN pip install --no-cache-dir --upgrade pip
-WORKDIR /zpodcore
-ENV PYTHONPATH=/zpodcore/zpodapi/src
 COPY --from=requirements-stage /tmp/requirements.txt /requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /requirements.txt
+WORKDIR /zpodcore
+ENV PYTHONPATH=/zpodcore/src
 CMD ["tail", "-f", "/dev/null"]
 
 # DEV
 FROM base as dev
-RUN apt-get update && apt-get install -y git \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN pip install --no-cache-dir poetry
-RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/commandhistory/.zpodapi_bash_history" && echo $SNIPPET >> "/root/.bashrc"
-CMD ["python", "/zpodcore/zpodapi/scripts/startup/start_reload.py"]
+CMD ["python", "/zpodcore/scripts/startup/start_reload.py"]
 
 # PROD
 FROM base as production
-COPY ./zpodapi /zpodcore/zpodapi
-CMD ["python", "/zpodcore/zpodapi/scripts/startup/start.py"]
+COPY ./zpodapi/scripts /zpodcore/scripts
+COPY ./zpodapi/tests /zpodcore/tests
+COPY ./zpodapi/src/zpodapi /zpodcore/src/zpodapi
+COPY ./zpodcommon/src/zpodcommon /zpodcore/src/zpodcommon
+CMD ["python", "/zpodcore/scripts/startup/start.py"]
