--- a/zpodapi/pyproject.toml
+++ b/zpodapi/pyproject.toml
@@ -6,33 +6,33 @@ authors = ["Kelby Valenti <kelby@valenti.ws>", "Timo Sugliani <timo.sugliani@gma
 readme = "README.md"
 
 [tool.poetry.dependencies]
-alembic = "1.8.1"
-email-validator = "1.3.0"
-fastapi = "0.88.0"
+alembic = "1.9.3"
+email-validator = "1.3.1"
+fastapi = "0.90.0"
 gunicorn = "20.1.0"
-httpx = "0.23.1"
-ipython = "8.7.0"
+httpx = "0.23.3"
+ipython = "8.9.0"
 passlib = "1.7.4"
 psycopg2-binary = "2.9.5"
 python = "^3.11.1"
-python-dotenv = "0.21.0"
+python-dotenv = "0.21.1"
 python-jose = {extras = ["cryptography"], version = "3.3.0"}
 python-multipart = "0.0.5"
-rich = "12.6.0"
+rich = "13.3.1"
 sqlmodel = "0.0.8"
-tenacity = "8.1.0"
+tenacity = "8.2.0"
 uvicorn = "0.20.0"
 
-[tool.poetry.dev-dependencies]
-black = "22.10.0"
-coverage = "6.5.0"
-debugpy = "1.6.4"
+[tool.poetry.group.dev.dependencies]
+black = "23.1.0"
+coverage = "7.1.0"
+debugpy = "1.6.6"
 flake8 = "6.0.0"
-flake8-bugbear = "22.12.6"
-isort = "5.10.1"
-pytest = "7.2.0"
+flake8-bugbear = "23.1.20"
+isort = "5.12.0"
+pytest = "7.2.1"
 pytest-cov = "4.0.0"
-pytest-xdist = "3.1.0"
+pytest-xdist = "3.2.0"
 
 [build-system]
 requires = ["poetry-core"]
