--- a/zpodcli/pyproject.toml
+++ b/zpodcli/pyproject.toml
@@ -17,9 +17,9 @@ typer = {extras = ["all"], version = "^0.7.0"}
 zpodsdk = {path = "../zpodsdk", develop = true}
 
 [tool.poetry.group.dev.dependencies]
-flake8 = "^6.0.0"
-black = {version = "^23.1a1", allow-prereleases = true}
-ipython = "^8.8.0"
+flake8 = "6.0.0"
+black = "23.1.0"
+ipython = "8.9.0"
 
 
 [build-system]
