--- a/.env.default
+++ b/.env.default
@@ -9,4 +9,4 @@ COMPOSE_FILE=docker-compose.dev.yml
 ZPODAPI_DEV_MODE=true
 
 ZPODAPI_POSTGRES_PASSWORD=amazingpasswordin2022
-ZPODAPI_POSTGRES_DSN="postgresql://postgres:${ZPODAPI_POSTGRES_PASSWORD}@zpodpostgres/postgres"
+ZPODAPI_POSTGRES_DSN="postgresql://postgres:${ZPODAPI_POSTGRES_PASSWORD}@zpodpostgres/zpod"
