Adding COMPOSE_PROJECT_NAME & making container_name based on it to enable multiple executions of the same docker compose project based on current username
Signed-off-by: Timo Sugliani <timo.sugliani@gmail.com>

--- a/.env.default
+++ b/.env.default
@@ -1,9 +1,12 @@
 # Some default values
 
-# This is used for rich terminal size calculation
+# This is used for automatic rich logger terminal size calculation
+# `just docker-setup-rich` will automatically set this correctly 
+# `just zpodcore-start` will also call `just docker-setup-rich`
 COLUMNS=160
 
 COMPOSE_FILE=docker-compose.dev.yml
+COMPOSE_PROJECT_NAME=${USER}
 
 # If ZPODAPI_DEV_MODE set to false, normal log output.
 ZPODAPI_DEV_MODE=true
