--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   zpodapi:
-    container_name: zpodapi
+    container_name: ${COMPOSE_PROJECT_NAME}-zpodapi
     build:
       context: .
       dockerfile: ./zpodapi/dockerfile
@@ -30,7 +30,7 @@ services:
       - zpod-history-vol:/commandhistory
 
   zpodpostgres:
-    container_name: zpodpostgres
+    container_name: ${COMPOSE_PROJECT_NAME}-zpodpostgres
     environment:
       - POSTGRES_PASSWORD=${ZPODAPI_POSTGRES_PASSWORD}
     build:
@@ -44,7 +44,7 @@ services:
 
   # Prefect Orion API
   zpodengineorion:
-    container_name: zpodengineorion
+    container_name: ${COMPOSE_PROJECT_NAME}-zpodengineorion
     image: prefecthq/prefect:2.7.12-python3.11
     depends_on:
       - zpodpostgres
@@ -52,6 +52,7 @@ services:
     environment:
       - PREFECT_API_URL=http://${ZPODENGINE_HOSTPORT:-127.0.0.1:4200}/api
       - PREFECT_ORION_API_HOST=0.0.0.0
+      # - PREFECT_ORION_UI_API_URL=http://${ZPODENGINE_HOSTPORT}/api
       - PREFECT_ORION_DATABASE_CONNECTION_URL=postgresql+asyncpg://postgres:${ZPODAPI_POSTGRES_PASSWORD}@zpodpostgres/orion
     ports:
       - ${ZPODENGINE_HOSTPORT:-127.0.0.1:4200}:4200
@@ -61,7 +62,7 @@ services:
 
   # Prefect Agent
   zpodengineagent:
-    container_name: zpodengineagent
+    container_name: ${COMPOSE_PROJECT_NAME}-zpodengineagent
     image: prefecthq/prefect:2.7.12-python3.11
     depends_on:
       - zpodpostgres
@@ -74,7 +75,7 @@ services:
 
   # Prefect CLI
   zpodenginecli:
-    container_name: zpodenginecli
+    container_name: ${COMPOSE_PROJECT_NAME}-zpodenginecli
     build:
       context: .
       dockerfile: ./zpodengine/dockerfile
