--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,7 +13,7 @@ services:
     env_file:
       - .env
     environment:
-      - COLUMNS=$COLUMNS
+      - COLUMNS
       - HISTFILE=/commandhistory/.zpodapi_bash_history
       - PYDEVD_DISABLE_FILE_VALIDATION=1
     init: true
