--- a/zpodapi/pyproject.toml
+++ b/zpodapi/pyproject.toml
@@ -13,7 +13,7 @@ gunicorn = "20.1.0"
 httpx = "0.23.3"
 ipython = "8.9.0"
 passlib = "1.7.4"
-psycopg2-binary = "2.9.5"
+psycopg2 = "2.9.5"
 python = "^3.11.1"
 python-dotenv = "0.21.1"
 python-jose = {extras = ["cryptography"], version = "3.3.0"}
@@ -37,4 +37,3 @@ pytest-xdist = "3.2.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
