--- a/zpodengine/dockerfile
+++ b/zpodengine/dockerfile
@@ -1,4 +1,6 @@
 # Define Versions
+ARG POETRY_VERSION=1.3.2
+ARG POETRY_VENV=/opt/venv
 ARG PS_VERSION=7.3.2
 ARG PS_INSTALL_VERSION=7-3-2
 ARG POWERCLI_VERSION=13.0.0.20829139
