--- a/zpodengine/dockerfile
+++ b/zpodengine/dockerfile
@@ -12,6 +12,10 @@ ARG VCC_VERSION=1.1.2
 # Base
 FROM python:3.11.1-slim as base
 
+ARG POETRY_VENV
+
+ENV PATH="${POETRY_VENV}/bin:${PATH}"
+
 
 
 #################################################
@@ -29,7 +33,6 @@ ARG VCC_VERSION
 
 WORKDIR /tmp
 
-ENV PATH="${POETRY_VENV}/bin:${PATH}"
 COPY ./zpodengine/pyproject.toml ./zpodengine/poetry.lock* /tmp/
 
 RUN python3 -m venv $POETRY_VENV \
