Move postgres settings to zpodcore prefix

--- a/.env.default
+++ b/.env.default
@@ -6,8 +6,8 @@ COMPOSE_PROJECT_NAME=${USER}
 # If ZPODAPI_DEV_MODE set to false, normal log output.
 ZPODAPI_DEV_MODE=true
 
-ZPODAPI_POSTGRES_PASSWORD=amazingpasswordin2022
-ZPODAPI_POSTGRES_DSN="postgresql://postgres:${ZPODAPI_POSTGRES_PASSWORD}@zpodpostgres/zpod"
+ZPODCORE_POSTGRES_PASSWORD=amazingpasswordin2022
+ZPODCORE_POSTGRES_DSN="postgresql://postgres:${ZPODCORE_POSTGRES_PASSWORD}@zpodpostgres/zpod"
 
 # Set to your current environment
 ZPODFACTORY_LIBRARY_PATH=./zPodLibrary
