--- a/zpodapi/pyproject.toml
+++ b/zpodapi/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 alembic = "1.9.3"
 email-validator = "1.3.1"
 fastapi = "0.90.0"
+gitpython = "3.1.30"
 gunicorn = "20.1.0"
 httpx = "0.23.3"
 ipython = "8.9.0"
