--- a/.env.default
+++ b/.env.default
@@ -8,3 +8,8 @@ ZPODAPI_DEV_MODE=true
 
 ZPODAPI_POSTGRES_PASSWORD=amazingpasswordin2022
 ZPODAPI_POSTGRES_DSN="postgresql://postgres:${ZPODAPI_POSTGRES_PASSWORD}@zpodpostgres/zpod"
+
+# Set to your current environment
+ZPODFACTORY_LIBRARY_PATH=./zPodLibrary
+ZPODFACTORY_PRODUCT_PATH=/zPod/Products
+
