--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,11 +22,14 @@ services:
       - ${ZPODAPI_DEBUG_HOSTPORT:-127.0.0.1:5678}:5678
     restart: always
     tty: true
+    # user: "${UID}:${GID}"
     volumes:
       - ./zpodapi/scripts:/zpodcore/scripts:cached
       - ./zpodapi/tests:/zpodcore/tests:cached
       - ./zpodapi/src/zpodapi:/zpodcore/src/zpodapi:cached
       - ./zpodcommon/src/zpodcommon:/zpodcore/src/zpodcommon:cached
+      - ${ZPODFACTORY_LIBRARY_PATH}:/library
+      - ${ZPODFACTORY_PRODUCT_PATH}:/products
       - ./logs:/zpodcore/logs:cached
       - zpod-history-vol:/commandhistory
 
