--- a/zpodengine/pyproject.toml
+++ b/zpodengine/pyproject.toml
@@ -11,6 +11,7 @@ ipython = "8.9.0"
 prefect = "2.8.0"
 psycopg2 = "2.9.5"
 python = "^3.11.1"
+python-dotenv = "0.21.1"
 sqlmodel = "0.0.8"
 
 [tool.poetry.group.dev.dependencies]
