Fix some defaults and add new required ones + information
Signed-off-by: Timo Sugliani <timo.sugliani@gmail.com>

--- a/.env.default
+++ b/.env.default
@@ -9,7 +9,19 @@ ZPODAPI_DEV_MODE=true
 ZPODCORE_POSTGRES_PASSWORD=amazingpasswordin2022
 ZPODCORE_POSTGRES_DSN="postgresql://postgres:${ZPODCORE_POSTGRES_PASSWORD}@zpodpostgres/zpod"
 
-# Set to your current environment
-ZPODFACTORY_LIBRARY_PATH=./zPodLibrary
-ZPODFACTORY_PRODUCT_PATH=/zPod/Products
+# Set to your current environment (use absolute paths)
+ZPODCORE_LIBRARY_PATH=/zPodLibrary
+ZPODCORE_PRODUCTS_PATH=/zPod/Products
 
+# Customer Connect credentials (this will change soon)
+ZPODCORE_VCC_USERNAME="xyz@company.com"
+ZPODCORE_VCC_PASSWORD="amazingpassword"
+
+# Changing default listening ip/ports (optional)
+# This makes only sense if you run multiple instances
+# of this project on the same device.
+
+# ZPODAPI_HOSTPORT=X.X.X.X:8300
+# ZPODAPI_DEBUG_HOSTPORT=X.X.X.X:8399
+# ZPODAPI_POSTGRES_HOSTPORT=X.X.X.X:8350
+# ZPODENGINE_HOSTPORT=X.X.X.X:8360
