--- a/zpodapi/pyproject.toml
+++ b/zpodapi/pyproject.toml
@@ -23,6 +23,7 @@ rich = "13.3.1"
 sqlmodel = "0.0.8"
 tenacity = "8.2.0"
 uvicorn = "0.20.0"
+pyvmomi = "^8.0.0.1.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "23.1.0"
