--- a/zpodengine/pyproject.toml
+++ b/zpodengine/pyproject.toml
@@ -13,6 +13,7 @@ psycopg2 = "2.9.5"
 python = "^3.11.1"
 python-dotenv = "0.21.1"
 sqlmodel = "0.0.8"
+pyvmomi = "^8.0.0.1.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "23.1.0"
