Removed unused imports after alembic revision generation

--- a/zpodapi/scripts/alembic/alembic.ini
+++ b/zpodapi/scripts/alembic/alembic.ini
@@ -60,7 +60,7 @@ sqlalchemy.url = driver://user:pass@localhost/dbname
 # detail and examples
 
 # format using "black" - use the console_scripts runner, against the "black" entrypoint
-hooks = black,isort
+hooks = autoflake,black,isort
 
 black.type = console_scripts
 black.entrypoint = black
@@ -69,6 +69,10 @@ black.options = -l 88 REVISION_SCRIPT_FILENAME
 isort.type = console_scripts
 isort.entrypoint = isort
 isort.options = REVISION_SCRIPT_FILENAME
+
+autoflake.type = console_scripts
+autoflake.entrypoint = autoflake
+autoflake.options = --in-place --remove-all-unused-imports REVISION_SCRIPT_FILENAME
 
 # Logging configuration
 [loggers]
