--- a/zpodapi/pyproject.toml
+++ b/zpodapi/pyproject.toml
@@ -26,6 +26,7 @@ uvicorn = "0.20.0"
 pyvmomi = "^8.0.0.1.2"
 
 [tool.poetry.group.dev.dependencies]
+autoflake = "2.0.2"
 black = "23.1.0"
 coverage = "7.1.0"
 debugpy = "1.6.6"
