--- a/zpodengine/pyproject.toml
+++ b/zpodengine/pyproject.toml
@@ -7,22 +7,22 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 email-validator = "1.3.1"
-ipython = "8.9.0"
-prefect = "2.8.5"
+ipython = "^8.11.0"
+prefect = "2.8.7"
 psycopg2 = "2.9.5"
 python = "^3.11.1"
-python-dotenv = "0.21.1"
+python-dotenv = "1.0.0"
 sqlmodel = "0.0.8"
 pyvmomi = "^8.0.0.1.2"
 
 [tool.poetry.group.dev.dependencies]
-black = "23.1.0"
-flake8 = "6.0.0"
-flake8-bugbear = "23.1.20"
-isort = "5.12.0"
-pytest = "7.2.1"
-pytest-cov = "4.0.0"
-pytest-xdist = "3.2.0"
+black = "^23.1.0"
+flake8 = "^6.0.0"
+flake8-bugbear = "^23.1.20"
+isort = "^5.12.0"
+pytest = "^7.2.1"
+pytest-cov = "^4.0.0"
+pytest-xdist = "^3.2.0"
 
 [build-system]
 requires = ["poetry-core"]
