--- a/zpodapi/pyproject.toml
+++ b/zpodapi/pyproject.toml
@@ -6,36 +6,36 @@ authors = ["Kelby Valenti <kvalenti@vmware.com>", "Timo Sugliani <tsugliani@vmwa
 readme = "README.md"
 
 [tool.poetry.dependencies]
-alembic = "1.9.3"
+alembic = "1.10.2"
 email-validator = "1.3.1"
-fastapi = "0.90.0"
-gitpython = "3.1.30"
+fastapi = "0.95.0"
+gitpython = "3.1.31"
 gunicorn = "20.1.0"
 httpx = "0.23.3"
-ipython = "8.9.0"
+ipython = "^8.11.0"
 passlib = "1.7.4"
 psycopg2 = "2.9.5"
 python = "^3.11.1"
-python-dotenv = "0.21.1"
+python-dotenv = "1.0.0"
 python-jose = {extras = ["cryptography"], version = "3.3.0"}
-python-multipart = "0.0.5"
-rich = "13.3.1"
+python-multipart = "0.0.6"
+rich = "13.3.3"
 sqlmodel = "0.0.8"
-tenacity = "8.2.0"
-uvicorn = "0.20.0"
+tenacity = "8.2.2"
+uvicorn = "0.21.1"
 pyvmomi = "^8.0.0.1.2"
 
 [tool.poetry.group.dev.dependencies]
-autoflake = "2.0.2"
-black = "23.1.0"
-coverage = "7.1.0"
-debugpy = "1.6.6"
-flake8 = "6.0.0"
-flake8-bugbear = "23.1.20"
-isort = "5.12.0"
-pytest = "7.2.1"
-pytest-cov = "4.0.0"
-pytest-xdist = "3.2.0"
+autoflake = "^2.0.2"
+black = "^23.1.0"
+coverage = "^7.1.0"
+debugpy = "^1.6.6"
+flake8 = "^6.0.0"
+flake8-bugbear = "^23.1.20"
+isort = "^5.12.0"
+pytest = "^7.2.1"
+pytest-cov = "^4.0.0"
+pytest-xdist = "^3.2.0"
 
 [build-system]
 requires = ["poetry-core"]
