--- a/zpodcli/pyproject.toml
+++ b/zpodcli/pyproject.toml
@@ -17,12 +17,11 @@ typer = {extras = ["all"], version = "^0.7.0"}
 zpodsdk = {path = "../zpodsdk", develop = true}
 
 [tool.poetry.group.dev.dependencies]
-flake8 = "6.0.0"
-black = "23.1.0"
-ipython = "8.9.0"
+flake8 = "^6.0.0"
+black = "^23.1.0"
+ipython = "^8.9.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
