--- a/zpodengine/pyproject.toml
+++ b/zpodengine/pyproject.toml
@@ -10,7 +10,7 @@ email-validator = "1.3.1"
 ipython = "^8.11.0"
 prefect = "2.8.7"
 psycopg2 = "2.9.5"
-python = "^3.11.1"
+python = "3.11.2"
 python-dotenv = "1.0.0"
 sqlmodel = "0.0.8"
 pyvmomi = "^8.0.0.1.2"
