Add dnsmasq Host VM / Docker interaction facilities
Signed-off-by: Timo Sugliani <timo.sugliani@gmail.com>

--- a/.env.default
+++ b/.env.default
@@ -13,6 +13,10 @@ ZPODCORE_POSTGRES_DSN="postgresql://postgres:${ZPODCORE_POSTGRES_PASSWORD}@zpodp
 ZPODCORE_LIBRARY_PATH=/zPodLibrary
 ZPODCORE_PRODUCTS_PATH=/zPod/Products
 
+# Required path for zPodFactory host 
+# This is where all the dnsmasq zPod subdomains configuration live.
+ZPODCORE_DNSMASQ_PATH=/zPod/zPodDNS
+
 # Customer Connect credentials (this will change soon)
 ZPODCORE_VCC_USERNAME="xyz@company.com"
 ZPODCORE_VCC_PASSWORD="amazingpassword"
