--- a/zpodengine/pyproject.toml
+++ b/zpodengine/pyproject.toml
@@ -14,6 +14,7 @@ python = "3.11.2"
 python-dotenv = "1.0.0"
 sqlmodel = "0.0.8"
 pyvmomi = "^8.0.0.1.2"
+jinja2 = "^3.1.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
