--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -119,6 +119,7 @@ services:
       - zpod_vol_history:/commandhistory
       - ${ZPODCORE_LIBRARY_PATH}:/library
       - ${ZPODCORE_PRODUCTS_PATH}:/products
+      - ${ZPODCORE_DNSMASQ_PATH}:/etc/dnsmasq.d
 
 volumes:
   zpod_vol_history: null
