Add ZPODAPI_HOST & impacts zPodFactory Appliance Deployment/Firstboot
Signed-off-by: Timo Sugliani <timo.sugliani@gmail.com>

--- a/.env.default
+++ b/.env.default
@@ -13,13 +13,19 @@ ZPODCORE_POSTGRES_DSN="postgresql://postgres:${ZPODCORE_POSTGRES_PASSWORD}@zpodp
 ZPODCORE_LIBRARY_PATH=/zPodLibrary
 ZPODCORE_PRODUCTS_PATH=/zPod/Products
 
-# Required path for zPodFactory host 
+# Required path for zPodFactory host
 # This is where all the dnsmasq zPod subdomains configuration live.
 ZPODCORE_DNSMASQ_PATH=/zPod/zPodDNS
 
 # Customer Connect credentials (this will change soon)
 ZPODCORE_VCC_USERNAME="xyz@company.com"
 ZPODCORE_VCC_PASSWORD="amazingpassword"
+
+# API will provide a target IP for some things to connect to this instance
+# - NFS/DNS/NTP/etc...
+# ZPODAPI_HOST will represent the public/private IP of the VM.
+# This is the IP of the host VM that runs docker compose.
+# ZPODAPI_HOST=X.X.X.X
 
 # Changing default listening ip/ports (optional)
 # This makes only sense if you run multiple instances
